# pybookget

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
pybookget/: pyproject.toml  requirements.txt
pybookget/pybookget/: cli.py  config.py
pybookget/pybookget/handlers/: iiif.py
pybookget/pybookget/http/: client.py  cookies.py  download.py
pybookget/pybookget/models/: iiif.py
pybookget/pybookget/router/: base.py
pybookget/pybookget/utils/: __init__.py  file.py  text.py
src/pybookget/: __init__.py  __main__.py  cli.py  config.py
src/pybookget/formats/: README.md  __init__.py  alto.py  base.py  iiif.py  mets.py  rocrate.py
src/pybookget/handlers/: __init__.py  erara.py  iiif.py  library.py
src/pybookget/http/: __init__.py  client.py  headers.py
src/pybookget/models/: __init__.py  erara.py  iiif.py  library.py  mets.py
src/pybookget/router/: __init__.py  base.py  registry.py
src/pybookget/utils/: file.py  text.py
